--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "cool-todo-list",
   "version": "0.1.0",
   "private": true,
+  "main": "server/server.js",
+  "proxy": "http://localhost:4000/",
   "dependencies": {
+    "body-parser": "^1.18.1",
+    "express": "^4.15.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.13"
