--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "server/server.js",
   "proxy": "http://localhost:4000/",
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
+    "massive": "^4.2.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.13"
