--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "massive": "^4.2.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13"
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.13",
+    "redux": "^3.7.2",
+    "redux-promise-middleware": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
